# notebooklm-enterprise-experiments-py

./: .env.example  .gitignore  MCP_CONFIG_GUIDE.md  README.md  pyproject.toml
.cursor/rules/: development-workflow.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
notebooklm_enterprise_experiments_py/: __init__.py
notebooklm_enterprise_experiments_py/application/: __init__.py
notebooklm_enterprise_experiments_py/application/dto/: __init__.py  notebook_dto.py
notebooklm_enterprise_experiments_py/application/services/: __init__.py  notebook_service.py
notebooklm_enterprise_experiments_py/config/: __init__.py  env_config.py
notebooklm_enterprise_experiments_py/domain/: __init__.py
notebooklm_enterprise_experiments_py/domain/entities/: __init__.py  notebook.py
notebooklm_enterprise_experiments_py/domain/repositories/: __init__.py  (+1 more)
notebooklm_enterprise_experiments_py/infrastructure/: __init__.py
notebooklm_enterprise_experiments_py/interfaces/: __init__.py  search_interface.py
notebooklm_enterprise_experiments_py/models/: __init__.py  search.py
notebooklm_enterprise_experiments_py/services/: __init__.py  content_generator.py  vertex_ai_search_service.py
scripts/: generate_infographic.py  generate_metadata.py  generate_slides.py  verify_qa.py
servers/: rag_server.py
tests/: test_config.py  test_content_generator.py  test_entities.py  test_notebook_repository.py  test_notebook_service.py  test_notebooklm_client.py  test_rag_server.py  test_sample.py  test_search_interface.py  test_value_objects.py  test_vertex_ai_search_service.py
(+9 files in other folders)
