[project]
name = "notebooklm-enterprise-experiments-py"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform",
    "google-cloud-discoveryengine",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pyright",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# 推奨ルールセット: E(Error), F(Pyflakes), I(isort), UP(pyupgrade), N(pep8-naming)
select = ["E", "F", "I", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=notebooklm_enterprise_experiments_py --cov-report=term-missing"

[tool.pyright]
include = ["notebooklm_enterprise_experiments_py"]
typeCheckingMode = "standard"
pythonVersion = "3.13"

